--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p style="font-family: 'Century Gothic', 'MS Sans Serif', arial; font-size: 25px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;">
 
-<h5> Welcome to my crib <h5/>
+Welcome to my crib 
 
 
 <p style="font-family: 'Century Gothic', 'MS Sans Serif', arial; font-size: 17px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;">
