--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<p style="font-family: 'Century Gothic', 'MS Sans Serif', arial; font-size: 25px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;">
+<p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 25px; text-align:left; line-height:150%; margin:0px; color:hsl(0, 75%, 52%); clear:both;">
 
-Welcome to my crib 
+Bedford Foundation 
 
 
 <p style="font-family: 'Century Gothic', 'MS Sans Serif', arial; font-size: 17px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;">
