--- a/index.html
+++ b/index.html
@@ -2,16 +2,23 @@
 
 Bedford Foundation 
 
-
-<p style="font-family: 'Century Gothic', 'MS Sans Serif', arial; font-size: 17px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;">
-
-Ugh this is so frustrating
 <br>
 
-This is how I exit the webiste correct?
+<p style="font-family: 'Adobe Garamond Pro', 'MS Sans Serif', arial; font-size: 28px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both; style: italic">
+
+Sustainability 
+
+<br>
+
+STARTS WITH YOU
 
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
+
 
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eget sapien sed risus suscipit cursus. Quisque iaculis facilisis lacinia. Mauris euismod pellentesque tellus sit amet mollis. Nulla a scelerisque turpis, in gravida enim. Pellentesque sagittis faucibus elit, nec lobortis augue fringilla sed. Donec aliquam, mi in varius interdum, ante metus facilisis urna, in faucibus erat ex nec lectus. Cras tempus tincidunt purus, eu vehicula ante. Duis cursus vestibulum lorem.
