--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 Bedford Foundation 
 
 <br>
+<br>
+<br>
+<br>
 
-<p style="font-family: 'Adobe Garamond Pro', 'MS Sans Serif', arial; font-size: 28px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both; style: italic">
+<p/>
+
+
+<p style="font-family: 'Adobe Garamond Pro', 'MS Sans Serif', arial; font-size: 28px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both; span class="italic">
 
 Sustainability 
 
+<p/>
+
+
+<br>
+<br>
 <br>
 
 STARTS WITH YOU
