--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ Bedford Foundation
 
 <p style="font-family: 'Adobe Garamond Pro', 'MS Sans Serif', arial; font-size: 28px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both; span class="italic">
 
-Sustainability 
+<i> Sustainability </i>
+
 
 <p/>
 
