--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Bedford Foundation
 <p/>
 
 
-<p style="font-family: 'Adobe Garamond Pro', 'MS Sans Serif', arial; font-size: 28px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both; span class="italic">
+<p style="font-family: 'Adobe Garamond Pro', 'MS Sans Serif', arial; font-size: 14px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both; span class="italic">
 
 <i> Sustainability </i>
 
@@ -20,21 +20,19 @@ Bedford Foundation
 
 <br>
 <br>
+
+<p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 22px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;"">
+
+<strong>STARTS WITH YOU</strong>
+
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 
-STARTS WITH YOU
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eget sapien sed risus suscipit cursus. Quisque iaculis facilisis lacinia. Mauris euismod pellentesque tellus sit amet mollis. Nulla a scelerisque turpis, in gravida enim. Pellentesque sagittis faucibus elit, nec lobortis augue fringilla sed. Donec aliquam, mi in varius interdum, ante metus facilisis urna, in faucibus erat ex nec lectus. Cras tempus tincidunt purus, eu vehicula ante. Duis cursus vestibulum lorem.
-
-Just testing things here. 
 
 
