--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
+/* The hero image */
+.hero-image {
+    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("home-goods-editorial-01.jpg");
+
+    /* Set a specific height */
+    height: 50%;
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+/* Place text in the middle of the image */
+
+
+
 <p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 25px; text-align:left; line-height:150%; margin:0px; color:hsl(0, 75%, 52%); clear:both;">
 
 Bedford Foundation 
@@ -17,8 +36,6 @@ Bedford Foundation
 
 <p/>
 
-
-<br>
 <br>
 
 <p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 22px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;"">
@@ -32,7 +49,7 @@ Bedford Foundation
 <br>
 <br>
 
-
+  <button>Learn More</button>
 
 
 
