--- a/index.html
+++ b/index.html
@@ -1,34 +1,27 @@
+<html>
+    <head>
 
+    	  <p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 25px; text-align:left; line-height:150%; margin:0px; color:hsl(0, 75%, 52%); clear:both;">
 
-<p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 25px; text-align:left; line-height:150%; margin:0px; color:hsl(0, 75%, 52%); clear:both;">
+    	  	<title>Bedford Foundation</title>
 
-Bedford Foundation 
+      
+      
+    </head>
 
-<br>
-<br>
-<br>
-<br>
+    <body>
 
-<p/>
+    	<p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 22px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;"">
 
+    	<i> Sustainability </i>
+    	<br>
+       <strong>STARTS WITH YOU</strong>
+       <br>
+       <button>Learn More</button>
 
-<p style="font-family: 'Adobe Garamond Pro', 'MS Sans Serif', arial; font-size: 14px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both; span class="italic">
+    </body>
+</html>
 
-<i> Sustainability </i>
-
-
-<p/>
-
-<br>
-
-<p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 22px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;"">
-
-<strong>STARTS WITH YOU</strong>
-
-<br>
-<br>
-
-  <button>Learn More</button>
 
 
 
