--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     	  <p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 25px; text-align:left; line-height:150%; margin:0px; color:hsl(0, 75%, 52%); clear:both;">
 
-    	  	<title>Bedford Foundation</title>
+    	  	Bedford Foundation
 
       
       
