--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
     <head
 
-    	  	Bedford Foundation   
+    	  <title> Bedford Foundation </title>
+    	  <link rel="stylesheet" href="style.css">
+    	  
       
     </head>
 
