--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
 
 <style> 
 
-
-body {
+		body {
     margin: 0;
-    font-family: sans-serif;
-}
+    font-family: Proxima Nova sans-serif;
+	}
 
-.hero {
+		.hero {
     /* Sizing */
     width: 100vw;
     height: 100vh;
@@ -52,23 +51,23 @@ body {
     color: white; /* ADD THIS LINE */
     
     /* Background styles */
-    background-image: home-goods-editorial-01.jpg;
+    background-image: url (https://static1.squarespace.com/static/596e5cea6a49635fe12ce8e8/5ace28b5562fa7a9dc8af4bd/5ace28be575d1f2b3beac461/1538434595633/home-goods-editorial-01.jpg?format=2500w)
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-}
+	}
 
-.hero h1 {
+	.hero h1 {
     /* Text styles */
     font-size: 5em;
     
     /* Margins */
     margin-top: 0;
     margin-bottom: 0.5em;
-}
+	}
 
-.hero .btn {
+		.hero .btn {
     /* Positioning and sizing */
     display: block;
     width: 200px;
@@ -87,6 +86,6 @@ body {
     /* Border styles */
     border: 3px solid white; /* CHANGE THIS LINE */
     border-radius: 20px;
-}
+	}
 
 
