--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     color: white; /* ADD THIS LINE */
     
     /* Background styles */
-    background-image: url (https://static1.squarespace.com/static/596e5cea6a49635fe12ce8e8/5ace28b5562fa7a9dc8af4bd/5ace28be575d1f2b3beac461/1538434595633/home-goods-editorial-01.jpg?format=2500w)
+    background-image: url ('https://static1.squarespace.com/static/596e5cea6a49635fe12ce8e8/5ace28b5562fa7a9dc8af4bd/5ace28be575d1f2b3beac461/1538434595633/home-goods-editorial-01.jpg?format=2500w');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
