--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 
     	  <title> Bedford Foundation </title>
     
-			<link rel="stylesheet" href="style.css">
+			<style> 
+
+        body {
+    		margin: 0;
+    		font-family: Proxima Nova sans-serif;
+    		}
+    		</style> 
       
     </head>
 
