--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 
 <html>
     <head>
+   
 
-    	  <title> Bedford Foundation </title>
-    
-			<style> 
+        <p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 40px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;">
 
-        body {
-    		margin: 0;
-    		font-family: Proxima Nova sans-serif;
-    		}
-    		</style> 
-      
+      		Bedford Foundation
+
+      		</p>
     </head>
 
     <body>
@@ -20,13 +16,23 @@
     	 <section class="hero">
             <div class="hero-inner">
 
-				Sustainability 
+            	<p style="font-family: 'Adobe Garamond Pro', 'MS Sans Serif', arial; font-size: 16px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;">
+
+				<i> Sustainability </i>
             		<br>
             		<br>
-            	STARTS WITH YOU
+
+            	</p>
+
+            		<p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 25px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;">
+
+            	<strong> STARTS WITH YOU </strong> 
+
             		<br>
             		<br>
             		 <button>Learn More</button>
+
+            		 </p>
             </div>
         </section>
 
