--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
    
 
         <p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 50px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;">
-
+<br>
+<br>
+<br>
+<br>
       		Bedford Foundation
 
       		<br>
@@ -15,6 +18,16 @@
     </head>
 
     <body>
+
+    	<style>
+
+   		body.page-id-156 .hero 
+    	{
+  background: url( "https://static1.squarespace.com/static/596e5cea6a49635fe12ce8e8/5ace28b5562fa7a9dc8af4bd/5ace28be575d1f2b3beac461/1538434595633/home-goods-editorial-01.jpg?format=2500w" ) 100%;
+
+  	}
+
+  	</style> 
 
     	 <section class="hero">
             <div class="hero-inner">
