--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 50px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;">
 <br>
 <br>
-<br>
-<br>
       		Bedford Foundation
+
+      		<link rel="stylesheet" href="style.css"> 
 
       		<br>
       		<br>
@@ -18,40 +18,6 @@
     </head>
 
     <body>
-
-    	<style>
-
-   body, html {
-    height: 100%;
-}
-
-/* The hero image */
-.hero-image {
-    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://static1.squarespace.com/static/596e5cea6a49635fe12ce8e8/5ace28b5562fa7a9dc8af4bd/5ace28be575d1f2b3beac461/1538434595633/home-goods-editorial-01.jpg?format=2500w");
-
-    /* Set a specific height */
-    height: 50%;
-
-    /* Position and center the image to scale nicely on all screens */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-
-/* Place text in the middle of the image */
-.hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-}
-
-
-  	</style> 
 
     	 <section class="hero">
             <div class="hero-inner">
