--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <br>
       		Bedford Foundation
 
-      		<link rel="stylesheet" href="style.css"> 
+      	<section class="hero is-large has-bg-img"> <div class="hero-body"> <div class="container has-text-centered"> <h1 class="title">Title 1</h1> <h2 class="subtitle">Subtitle 3</h2> </div> </div> </section>
+
+<style>
+
+
+      	.has-bg-img { background: url('https://static1.squarespace.com/static/596e5cea6a49635fe12ce8e8/5ace28b5562fa7a9dc8af4bd/5ace28be575d1f2b3beac461/1538434595633/home-goods-editorial-01.jpg?format=2500w')center center; background-size:cover; }
+
+      	</style> 
 
       		<br>
       		<br>
