--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
 
       	.has-bg-img { background: url('https://static1.squarespace.com/static/596e5cea6a49635fe12ce8e8/5ace28b5562fa7a9dc8af4bd/5ace28be575d1f2b3beac461/1538434595633/home-goods-editorial-01.jpg?format=2500w')center center; background-size:cover; }
 
-      	
+      	body {
+    			margin: 0;
+    			font-family: Proxima Nova sans-serif;
+				}
+
+
 
       	</style> 
 
