--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
             		 <br>
       			<br>
 
+      			<p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 40px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;">
+
       			<center> <h1 class="title">Bedford Foundation</h1> </center>
 
-
+</p>
       			<br>
       			<br>
 
@@ -51,11 +53,7 @@
 
       	.has-bg-img { background: url('https://static1.squarespace.com/static/596e5cea6a49635fe12ce8e8/5ace28b5562fa7a9dc8af4bd/5ace28be575d1f2b3beac461/1538434595633/home-goods-editorial-01.jpg?format=2500w')center center; background-size:cover; }
 
-      	body {
-    			margin: 0;
-    			font-family: Proxima Nova sans-serif;
-				}
-
+      
 
 
       	</style> 
