--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
             		 <br>
       			<br>
 
-      			<p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 40px; text-align:center; line-height:150%; margin:0px; color:#000000; clear:both;">
+      			<p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 40px; line-height:150%; margin:0px; color:#000000; clear:both;">
 
       			<center> <h1 class="title">Bedford Foundation</h1> </center>
 
-</p>
+					</p>
       			<br>
       			<br>
 
       			<center> <h2 class="subtitle"><i> Sustainability </i></h2> </center>
 
-      				<br>
+      				
          
 
             	</p>
