--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
             		 <br>
       			<br>
 
-      			<p style="font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 40px; line-height:150%; margin:0px; color:#000000; clear:both;">
-
       			<center> <h1 class="title">Bedford Foundation</h1> </center>
 
 					</p>
+
+						</div> 
+      	</div> 
+      </section>
+
+      <section class="h2"> 
+      	<div class="h2"> <div class="container has-text-centered"> 
+
       			<br>
       			<br>
 
@@ -27,6 +33,10 @@
          
 
             	</p>
+
+            	</div> 
+      	</div> 
+      </section>
 
             	<center> <h3 class="subtitle"><strong> STARTS WITH YOU </strong> </h3> </center>
 
@@ -53,7 +63,7 @@
 
       	.has-bg-img { background: url('https://static1.squarespace.com/static/596e5cea6a49635fe12ce8e8/5ace28b5562fa7a9dc8af4bd/5ace28be575d1f2b3beac461/1538434595633/home-goods-editorial-01.jpg?format=2500w')center center; background-size:cover; }
 
-      
+     	.h2 {"font-family: 'Proxima Nova', 'MS Sans Serif', arial; font-size: 16px; text-align:left; line-height:150%; margin:0px; color:#000000; clear:both;">}
 
 
       	</style> 
