--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <html>
     <head>
 
+      <style>
+
+        .has-bg-img { background: url('https://static1.squarespace.com/static/596e5cea6a49635fe12ce8e8/5ace28b5562fa7a9dc8af4bd/5ace28be575d1f2b3beac461/1538434595633/home-goods-editorial-01.jpg?format=2500w')center center; background-size:cover; }
+
+    
+      h1   {color: hsl(175, 49%, 21%);}
+      h2   {color: hsl(175, 26%, 95%);}
+      h3    {color: hsl(175, 26%, 95%);}
+</style>
+
       	<section class="hero is-large has-bg-img"> 
 
       		<div class="hero-body"> <div class="container has-text-centered"> 
@@ -51,7 +61,8 @@
 <style>
 
 
-      	.has-bg-img { background: url('https://static1.squarespace.com/static/596e5cea6a49635fe12ce8e8/5ace28b5562fa7a9dc8af4bd/5ace28be575d1f2b3beac461/1538434595633/home-goods-editorial-01.jpg?format=2500w')center center; background-size:cover; }
+      
+        .
 
 
       	</style> 
