--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         .has-bg-img { background: url('https://static1.squarespace.com/static/596e5cea6a49635fe12ce8e8/5ace28b5562fa7a9dc8af4bd/5ace28be575d1f2b3beac461/1538434595633/home-goods-editorial-01.jpg?format=2500w')center center; background-size:cover; }
 
     
-      h1   {color: hsl(175, 49%, 21%);}
+      h1   {color: hsl(175, 49%, 21%);
+             font-family: Proxima Nova;
+              font-size: 40 px;
+
+ }
       h2   {color: hsl(175, 26%, 95%);}
       h3    {color: hsl(175, 26%, 95%);}
 </style>
