--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 
     
       h1   {color: hsl(175, 49%, 21%);
-             font-family: Proxima Nova;
-              font-size: 40 px;
-
- }
+             font-family: "Proxima Nova";
+              font-size: 40 px;}
       h2   {color: hsl(175, 26%, 95%);}
       h3    {color: hsl(175, 26%, 95%);}
 </style>
