--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     
       h1   {color: hsl(175, 49%, 21%);
-             font-family: "Proxima Nova";
+             font-family: "Proxima Nova", sans-serif;
               font-size: 40 px;}
       h2   {color: hsl(175, 26%, 95%);}
       h3    {color: hsl(175, 26%, 95%);}
