--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
     
       h1   {color: hsl(175, 49%, 21%);
-             font-family: "Futura PT", sans-serif;
+             font-family: "Lucida Console", sans-serif;
               font-size: 60px;}
       h2   {color: hsl(175, 26%, 95%);
-            font-family: "Futura PT",sans-serif;
+            font-family: "Lucida Console",sans-serif;
               font-size: 25px;}
       h3    {color: hsl(175, 26%, 95%);
-            font-family: "Futura PT", sans-serif;
+            font-family: "Lucida Console", sans-serif;
               font-size: 40px;}
 
     
