--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@
             		 <br>
       			<br>
 
-      			<center> <h1> Demo Foundation </h1> </center>
+      			<center> <h1> Lorem Foundation </h1> </center>
 
 					</p>
-     
 
-      			<br>
+      			<center> <h2><i> Quisque iaculis facilisis lacinia </i></h2> </center>
 
-      			<center> <h2><i> Practice </i></h2> </center>
-            <center> <h3><strong> makes perfect. </strong> </h3> </center>
+            <center> <h3><strong> Nulla a scelerisque turpis, in gravida enim </strong> </h3> </center>
             	<center> <button>Learn More</button> </center>
 
             		 <br>
