--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       			<br>
             		 <br>
             		 <br>
-            		 <br>
-      			<br>
+            		 
 
       			<center> <h1> Lorem Foundation </h1> </center>
 
@@ -37,7 +36,7 @@
 
       			<center> <h2><i> Quisque iaculis facilisis lacinia </i></h2> </center>
 
-            <center> <h3><strong> Nulla a scelerisque turpis, in gravida enim </strong> </h3> </center>
+            <center> <h3><strong> In gravida enim </strong> </h3> </center>
             	<center> <button>Learn More</button> </center>
 
             		 <br>
