--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             font-family: "Futura PT", sans-serif;
               font-size: 40px;}
 
+              button {font-family: "Futura PT", sans-serif;
+              font-size: 30px;}
+
     
           </style>
 
