--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 
     
       h1   {color: hsl(175, 49%, 21%);
-             font-family: "Futura PT", sans-serif;
+             font-family: "Montserrat", sans-serif;
               font-size: 60px;}
       h2   {color: hsl(175, 26%, 95%);
-            font-family: "Futura PT", sans-serif;
+            font-family: "Montserrat", sans-serif;
               font-size: 25px;}
       h3    {color: hsl(175, 26%, 95%);
-            font-family: "Futura PT", sans-serif;
+            font-family: "Montserrat", sans-serif;
               font-size: 40px;}
 
-              button {font-family: "Futura PT", sans-serif;
-              font-size: 30px;}
+              button {color: rgba(250,250,250,0);
+                font-family: "Montserrat", sans-serif;
+              font-size: 20px;}
 
     
           </style>
