--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             font-family: "Montserrat", sans-serif;
               font-size: 40px;}
 
-              button {color: rgba(250,250,250,0);
+              button {background-color: rgba(250,250,250,0);color: hsl(42, 46%, 59%);
                 font-family: "Montserrat", sans-serif;
               font-size: 20px;}
 
