--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             font-family: "Montserrat", sans-serif;
               font-size: 40px;}
 
-              button {background-color: hsl(42, 46%, 59%); color: hsl(42, 46%, 59%);
+              button {
                 font-family: "Montserrat", sans-serif;
-              font-size: 20px;}
+              font-size: 16px;}
 
     
           </style>
